--- a/Ketch/User Interface/Dock/DockView.xib
+++ b/Ketch/User Interface/Dock/DockView.xib
@@ -23,31 +23,45 @@
                         <constraint firstAttribute="width" secondItem="qrU-Rh-vA5" secondAttribute="height" multiplier="160:31" id="dyh-Du-Xdx"/>
                     </constraints>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-Pm-SQ2">
+                    <rect key="frame" x="0.0" y="0.0" width="80" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="3Pp-R3-fLA"/>
+                        <constraint firstAttribute="height" constant="50" id="uid-Gp-RLz"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
+                    <state key="normal" title="BACK">
+                        <color key="titleColor" red="0.34509803919999998" green="0.67843137249999996" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="goBack:" destination="-1" eventType="touchUpInside" id="HAw-CF-vAc"/>
+                    </connections>
+                </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xgv-Wh-zcG" userLabel="Keep Table">
-                    <rect key="frame" x="0.0" y="90" width="140" height="478"/>
+                    <rect key="frame" x="0.0" y="89" width="140" height="478.5"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </tableView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfr-SO-1X0">
-                    <rect key="frame" x="230" y="65" width="46" height="21"/>
+                    <rect key="frame" x="230" y="65" width="45.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <color key="textColor" red="0.078431372550000003" green="0.32156862749999998" blue="0.4549019608" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wgR-pc-Jsx" userLabel="Marry Table">
-                    <rect key="frame" x="181" y="90" width="139" height="478"/>
+                    <rect key="frame" x="181" y="89" width="139" height="478.5"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F4d-U6-O3S" userLabel="Separator">
-                    <rect key="frame" x="160" y="0.0" width="1" height="568"/>
+                    <rect key="frame" x="160" y="62" width="1" height="506"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="1" id="HPW-b5-eel"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keep" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tFy-Dd-FxZ">
-                    <rect key="frame" x="49" y="65" width="42" height="21"/>
+                    <rect key="frame" x="49" y="65" width="41.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <color key="textColor" red="0.078431372550000003" green="0.32156862749999998" blue="0.4549019608" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
@@ -62,7 +76,9 @@
                 <constraint firstItem="xgv-Wh-zcG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EJq-67-jRm"/>
                 <constraint firstItem="wgR-pc-Jsx" firstAttribute="leading" secondItem="F4d-U6-O3S" secondAttribute="trailing" constant="20" id="ELC-16-Zqp"/>
                 <constraint firstItem="xgv-Wh-zcG" firstAttribute="top" secondItem="tFy-Dd-FxZ" secondAttribute="bottom" constant="4" id="Jgr-fp-zL9"/>
-                <constraint firstItem="F4d-U6-O3S" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="KR3-W0-2yZ"/>
+                <constraint firstItem="F4d-U6-O3S" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="55" id="KR3-W0-2yZ"/>
+                <constraint firstItem="F4d-U6-O3S" firstAttribute="top" secondItem="qrU-Rh-vA5" secondAttribute="bottom" id="LQh-xh-cGm"/>
+                <constraint firstItem="RLY-Pm-SQ2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MbF-B8-1yj"/>
                 <constraint firstItem="Zfr-SO-1X0" firstAttribute="leading" secondItem="F4d-U6-O3S" secondAttribute="trailing" constant="69" id="N2e-JC-pm3"/>
                 <constraint firstAttribute="bottom" secondItem="wgR-pc-Jsx" secondAttribute="bottom" id="W6S-Om-K4r"/>
                 <constraint firstAttribute="bottom" secondItem="xgv-Wh-zcG" secondAttribute="bottom" id="XAa-wk-jLm"/>
@@ -73,12 +89,14 @@
                 <constraint firstItem="Zfr-SO-1X0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="65" id="dck-Bb-Wbs"/>
                 <constraint firstAttribute="trailing" secondItem="qrU-Rh-vA5" secondAttribute="trailing" id="jLz-i6-sMl"/>
                 <constraint firstItem="wgR-pc-Jsx" firstAttribute="top" secondItem="Zfr-SO-1X0" secondAttribute="bottom" constant="4" id="kqa-X1-nKw"/>
+                <constraint firstItem="RLY-Pm-SQ2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ndZ-7T-wZ3"/>
                 <constraint firstItem="xgv-Wh-zcG" firstAttribute="leading" secondItem="tFy-Dd-FxZ" secondAttribute="trailing" constant="-100" id="tga-AW-p4P"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="tga-AW-p4P"/>
+                    <exclude reference="KR3-W0-2yZ"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="76" y="349"/>
